# ecal-gpsd-client

./: CMakeLists.txt  LICENSE  NOTICE  README.md
.github/workflows/: build-ubuntu-18.yml  build-ubuntu-20.yml  build-ubuntu-22.yml
build_scripts/: build.sh  cmake.sh  make_all.sh  setenv.sh  setup.sh
cmake/: FindGPS.cmake  Findsimpleini.cmake
cpack/: cpack_variables.cmake
datatypes/: gps2ecal.proto  gpsd.proto  gpsdata.proto  header.proto
include/: gpshandler.h  gpshelper.h  gpssettings.h  gpsutil.h  stringutils.h
include/gpsdevice/: devicefactory.h  gpsddevice.h
include/gpsmessage/: gpsd.h  gpsddata.h  gpsdfullmsg.h  gpsdreducedmsg.h  gpsmsg.h  msgfactory.h
include/interface/: Idevice.h
ini/: gps2ecal.ini
src/: convert_utf.cpp  gpshandler.cpp  gpssettings.cpp  main.cpp
src/gpsdevice/: devicefactory.cpp  gpsddevice.cpp
src/gpsmessage/: gpsd.cpp  gpsddata.cpp  gpsdfullmsg.cpp  gpsdreducedmsg.cpp  gpsmsg.cpp  msgfactory.cpp
